tests/tests/pos/surface/type-outlives.rs
struct S<'a, T: 'a> {
    x: T,
    y: &'a i32,
}
