tests/tests/neg/error_messages/extern_specs/auxiliary/mismatched_generics_aux.rs
pub struct S<T1, T2 = i32> {
    f1: T1,
    f2: T2,
}
